k8s/media-services/organizr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: organizr
  namespace: media-services
  labels:
    app: organizr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: organizr
